# RSnake

./: .clang-format  .gitignore  AObjectShape.h  Board.cpp  Board.h  CMakeLists.txt  DBoardWall.cpp  DBoardWall.h  DBodyBuilder.cpp  DFruit.cpp  DFruit.h  DSnakeBody.cpp  Engine.cpp  Engine.h  Fruit.cpp  Fruit.h  Fruits.cpp  Fruits.h  IControl.h  InputControl.cpp  README.md  Snake.cpp  Snake.h  main.cpp  vcpkg.json
.github/workflows/: my_ci.yml
Control/: CMakeLists.txt  Controllable.hpp  IControl.h  IControl.hpp  InputControl.cpp  InputControl.h  InputControl.hpp
DrawShapes/: DBoardWall.cpp  DFruit.cpp  DSnakeBody.h
Drawable/: BlockFactory.cpp  BlockFactory.hpp  CMakeLists.txt  Collider.cpp  Collider.hpp  DBoard.cpp  DBoard.hpp  DBoardWall.cpp  DBoardWall.hpp  DFruit.cpp  DFruit.hpp  DSnakeBody.cpp  DSnakeBody.hpp  DrawableBlock.hpp  DrawableObject.cpp  DrawableObject.hpp  ObjectFactory.cpp  ObjectFactory.hpp  ResourceManager.cpp  ResourceManager.hpp
Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Engine.hpp
GameObjects/: Board.cpp  Board.h  Board.hpp  CMakeLists.txt  Fruit.cpp  Fruit.h  Fruit.hpp  ScoreBoard.cpp  ScoreBoard.h  ScoreBoard.hpp  Snake.cpp  Snake.h  Snake.hpp
GameObjects/Tests/: CMakeLists.txt  SnakeTests.cpp
GameObjects/UT/: BoardTest.cpp  CMakeLists.txt  DrawableBlockMock.hpp  FruitTest.cpp  SnakeTest.cpp
Shapes/: AObjectShape.h  BlockFactory.cpp  BlockFactory.hpp  CMakeLists.txt  DBoardWall.cpp  DBoardWall.h  DBoardWall.hpp  DBodyBuilder.cpp  DBodyBuilder.h  DFruit.cpp  DFruit.hpp  DSnakeBody.cpp  DSnakeBody.hpp  DrawableBlock.hpp
Tests/: CMakeLists.txt  GameObjectsTest.cpp
Utilities/: Constans.hpp  Point2d.hpp
